@@ -1,3 +1,4 @@
+Fixed an issue where the quantity of energy chunks exchanged with the air was too high when the burner was heating or cooling with nothing on it.
 Fixed an issue where the beaker fluid level appeared to jump when first shown because once clock cycle was needed to initialize fluid appearance.
 Fixed an issue where the sun's rays were briefly visible when the 2nd tab was first shown.
 # 0.00.38 (72559) Mar 19, 2013
